--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -53,16 +55,13 @@ button {
 body {
   line-height: 1.3;
   text-rendering: optimizeSpeed;
-  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-family: 'Bai Jamjuree', sans-serif;
   background-color: ghostwhite;
 }
 
-/* colors  */
 :root {
-  /* primary */
-  --dark-blue: hsla(234, 53%, 16%, 1);
-
-  /* neutral */
-  --gray: hsla(233, 10%, 56%, 1);
-
+  --purple: hsla(233, 100%, 69%, 1);
+  --green: hsla(171, 66%, 44%, 1);
+  --gray: hsla(210, 10%, 33%, 1);
+  --lt-gray: hsla(198, 11%, 83%, 1);
 }
