--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h3 {
   line-height: 30px;
   letter-spacing: 0.12px;
   margin: 0 auto;
-  max-width: 640px;
+  max-width: 350px;
   color: var(--lt-gray);
 }
 
@@ -199,6 +199,7 @@ h3 {
   display: flex;
   align-items: center;
   gap: 110px;
+  justify-content: center;
 }
 
 .flex-column {
@@ -208,14 +209,35 @@ h3 {
   max-width: 640px;
 }
 
+.grid-2x {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .specs {
   display: flex;
   flex-direction: column;
   text-align: left;
-  gap: 20px;
+  gap: 50px;
+  align-items: flex-start;
 }
 
 .download {
   display: flex;
   gap: 48px;
+}
+
+
+.computer {
+  transform: translateX(-150px) scale(1.3);
+}
+
+
+
+.overflow {
+  overflow: visible;
 }
