--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ main {
   padding-bottom: 56px;
 }
 
+.logo-white {
+  max-width: 50px;
+}
+
 .logo:hover {
   opacity: 70%;
   transition: ease-out 0.3s;
@@ -127,7 +131,7 @@ h3 {
   line-height: 30px;
   letter-spacing: 0.12px;
   margin: 0 auto;
-  max-width: 640px;
+  max-width: 680px;
   color: var(--lt-gray);
 }
 
@@ -178,6 +182,10 @@ h3 {
   padding-bottom: 20px;
 }
 
+.pt-20 {
+  padding-top: 20px;
+}
+
 .pb-40 {
   padding-bottom: 48px;
 }
@@ -195,6 +203,10 @@ h3 {
   padding-bottom: 140px;
 }
 
+.pb-180 {
+  padding-bottom: 180px;
+}
+
 .flex-row {
   display: flex;
   align-items: center;
@@ -207,6 +219,17 @@ h3 {
   flex-direction: column;
   margin: 0 auto;
   max-width: 640px;
+}
+
+.flex-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-list {
+  display: flex;
+  column-gap: 40px;
 }
 
 .grid-2x {
@@ -229,15 +252,58 @@ h3 {
 .download {
   display: flex;
   gap: 48px;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 640px;
 }
 
+.download-footer {
+  display: flex;
+  justify-content: center;
+  gap: 48px;
+  margin: 0 auto;
+  max-width: 520px;
+}
 
 .computer {
-  transform: translateX(-150px) scale(1.3);
+  transform: translateX(-200px) scale(1.5);
 }
-
 
 
 .overflow {
   overflow: visible;
+}
+
+.features {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.flex-icon {
+  display: flex;
+  gap: 40px;
+}
+
+.icon {
+  display: block;
+  max-width: 44px;
+}
+
+footer {
+  padding-block: 40px;
+  background-color: var(--green);
+  color: white;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 20px;
+}
+
+.footer-container {
+  max-width: 110px;
+  margin: 0 auto;
 }
