--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ a:hover {
 
 footer {
   padding-block: 40px;
-  background-color: var(--green);
+  background: linear-gradient(270.55deg, #38B6BF 0.11%, #26BBA4 94.8%);
   color: white;
 }
 
@@ -404,8 +404,13 @@ footer {
     transform: initial;
     padding-bottom: 50px;
   }
+}
 
-
+@media (max-width:650px) {
+  .flex-row-footer {
+    gap: 50px;
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 600px) {
@@ -437,4 +442,19 @@ footer {
     justify-content: space-between;
     flex-direction: column;
   }
+}
+
+
+/* colored scroll bar */
+
+::-webkit-scrollbar {
+  width: 1em;
+  height: 1em;
+  background: rgb(245, 245, 245);
+  box-shadow: inset 0 0 5px rgba(#49636d, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(30deg, #38a2bf 0.11%, #26BBA4 94.8%);
+  border-radius: 100vw;
 }
